fix: make background on iOS stop jumping

--- a/app/assets/stylesheets/styles/landing.scss
+++ b/app/assets/stylesheets/styles/landing.scss
@@ -166,11 +166,11 @@
 .landing__background {
   background: $black image-url('background.jpg') no-repeat center top;
   background-size: cover;
-  bottom: 0;
-  left: 0;
+  height: 100vh;
   position: fixed;
   right: 0;
   top: 0;
+  width: 100%;
   z-index: -1;
 }
 
